WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126705
[Mac] Scrubbing performance of HD content with software decoding is poor.
https://bugs.webkit.org/show_bug.cgi?id=126705
Summary
[Mac] Scrubbing performance of HD content with software decoding is poor.
Jer Noble
Reported
2014-01-09 10:28:04 PST
[Mac] Scrubbing performance of HD content with software decoding is poor.
Attachments
Patch
(9.29 KB, patch)
2014-01-09 12:57 PST
,
Jer Noble
eric.carlson
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(8.70 KB, patch)
2014-01-09 13:39 PST
,
Jer Noble
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2
(523.02 KB, application/zip)
2014-01-09 14:33 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion
(564.61 KB, application/zip)
2014-01-09 15:08 PST
,
Build Bot
no flags
Details
Patch for landing
(10.86 KB, patch)
2014-01-09 15:33 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-01-09 12:57:52 PST
Created
attachment 220761
[details]
Patch
Jer Noble
Comment 2
2014-01-09 13:08:42 PST
<
rdar://problem/14652501
>
Eric Carlson
Comment 3
2014-01-09 13:17:18 PST
Comment on
attachment 220761
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=220761&action=review
> Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:277 > + m_pendingSeek = std::bind(&MediaPlayerPrivateAVFoundation::seekWithTolerance, this, time, negativeTolerance, positiveTolerance);
Can you just use a C++11 lambda here (
https://bugs.webkit.org/show_bug.cgi?id=126639
implies we are going away from bind())?
Build Bot
Comment 4
2014-01-09 13:28:53 PST
Comment on
attachment 220761
[details]
Patch
Attachment 220761
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5307652670226432
Build Bot
Comment 5
2014-01-09 13:33:51 PST
Comment on
attachment 220761
[details]
Patch
Attachment 220761
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6024591159853056
Jer Noble
Comment 6
2014-01-09 13:39:23 PST
Created
attachment 220764
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2014-01-09 13:49:05 PST
Attachment 220764
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp', u'Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.h', u'Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:277: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 8
2014-01-09 14:33:07 PST
Comment on
attachment 220764
[details]
Patch for landing
Attachment 220764
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5513936057139200
New failing tests: media/video-seek-multiple.html media/video-fast-seek.html
Build Bot
Comment 9
2014-01-09 14:33:09 PST
Created
attachment 220770
[details]
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 10
2014-01-09 15:08:54 PST
Comment on
attachment 220764
[details]
Patch for landing
Attachment 220764
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6134343680393216
New failing tests: media/video-seek-multiple.html media/video-fast-seek.html
Build Bot
Comment 11
2014-01-09 15:08:58 PST
Created
attachment 220774
[details]
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-07 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Jer Noble
Comment 12
2014-01-09 15:33:24 PST
Created
attachment 220776
[details]
Patch for landing Clean up some unused ivars and only send a timeupdate event when all the seeks are complete.
WebKit Commit Bot
Comment 13
2014-01-09 15:35:13 PST
Attachment 220776
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp', u'Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.h', u'Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm', u'Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:276: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 14
2014-01-09 17:54:20 PST
Committed
r161613
: <
http://trac.webkit.org/changeset/161613
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug